# SALMON2

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  LICENSE.THIRD-PARTY  README.md  configure.py
src/: CMakeLists.txt  Doxyfile  config.h.in  main.f90  version.h.in  versionf.h.in
src/ARTED/: CMakeLists.txt  main.f90
src/GCEED/: CMakeLists.txt  gceed.f90  read_input_gceed.f90
src/atom/: CMakeLists.txt  jellium.f90
src/common/: CMakeLists.txt  array_index.h  broyden.f90  calc_allob.f90  calc_gradient_psi.f90  calc_iquotient.f90  calc_iroot.f90  calc_iroot_ud.f90  calc_myob.f90  calc_myob_ud.f90  calc_ob_num.f90  check_corrkob.f90  check_corrkob_ud.f90  check_mg.f90  check_ng.f90  check_numcpu.f90  const.f90  density_matrix.f90  eigenexa_module.f90  force.f90  gram_schmidt.f90  gram_schmidt_orth.f90  hamiltonian.f90  hpsi.f90  init_nonorthogonal.f90  init_reciprocal_grid.f90  initialization.f90  inner_product.f90  inner_product3.f90  inner_product4.f90  inner_product5.f90  inner_product7.f90  inner_product_ud.f90  lattice.f90  local_potential.f90  nonlocal_potential.f90  pack_unpack.f90  print.f90  pseudo_pt.f90  scalapack_module.f90  (+18 more)
src/ext/: CMakeLists.txt
src/gs/: CMakeLists.txt  band.f90  band_dft.f90  conjugate_gradient.f90  eigen_subdiag.f90  eigen_subdiag_eigenexa.f90  eigen_subdiag_lapack.f90  eigen_subdiag_periodic_lapack.f90  eigen_subdiag_periodic_scalapack.f90  eigen_subdiag_scalapack.f90  eigenexa_module.f90  gram_schmidt_orth.f90  gscg.f90  gscg_periodic.f90  init_gs.f90  initialization_dft.f90  main_dft.f90  main_dft_md.f90  mixing.f90  occupation.f90  output_GS.f90  preconditioning.f90  read_gs.f90  rmmdiis.f90  rmmdiis_eigen.f90  rmmdiis_eigen_lapack.f90  scalapack_module.f90  scf_iteration.f90  scf_iteration_dft.f90  structure_opt.f90  subspace_diag.f90  subspace_diag_periodic.f90  subspace_diagonalization.f90  ybcg.f90  ybcg_periodic.f90
src/io/: CMakeLists.txt  checkpoint_restart.f90  filesystem.f90  flops.f90  inputoutput.f90  main_dft2tddft.f90  main_dft_k_expand.f90  main_dft_k_expand_slice.f90  perflog.f90  performance_analyzer.f90  posix.c  posix_io.c  posix_io.f90  read_rtdata_file.f90  salmon_file.f90  salmon_global.f90  write.f90  write_field.f90  write_file3d.f90  write_performance_results.f90
src/math/: CMakeLists.txt  math_constants.f90  phys_constants.f90  salmon_math.f90
src/maxwell/: CMakeLists.txt  classic_em.f90  common_maxwell.f90  coulomb_calc.f90  coulomb_finalize.f90  coulomb_init.f90  eh_calc.f90  eh_finalize.f90  eh_init.f90  eh_misc.f90  fdtd_coulomb_gauge.f90  fdtd_eh.f90  fdtd_weyl_gauge.f90  find_point_em.f90  main_maxwell.f90  salmon_maxwell.f90  set_coo_em.f90  weyl_calc.f90  weyl_finalize.f90  weyl_init.f90
src/misc/: CMakeLists.txt  backup_routines.f90  misc_routines.f90  timer.f90  unusedvar.f90  write_performance_results.f90
src/ms/: CMakeLists.txt  convert_input_ms.f90  initialization_ms.f90  input_checker_ms.f90  main_ms.f90
src/parallel/: CMakeLists.txt  code_optimization.f90  communication.f90  communication_dummy.f90  init_communicator.f90  network_address.f90  parallelization.f90  salmon_communication.f90  salmon_communication_dummy.f90  salmon_parallel.f90  sendrecv_grid.f90  set_numcpu.f90
src/paw/: CMakeLists.txt  paw_variables.f90  radial_1d.f90
src/plusu/: CMakeLists.txt  calcJxyz_all_plusu.f90  calc_jxyz_plusu.f90  calc_nps_plusu.f90  density_matrix_and_energy_plusu.f90  density_matrix_plusu.f90  plusu_global.f90  prep_pp_plusu.f90  pseudo_pt_plusu.f90  update_kvector_plusu.f90
src/poisson/: CMakeLists.txt  hartree.f90  hartree_boundary.f90  hartree_cg.f90  hartree_ffte.f90  hartree_periodic.f90  init_poisson.f90  poisson_boundary.f90  poisson_cg.f90  poisson_dirichlet.f90  poisson_ffte.f90  poisson_isolated.f90  poisson_periodic.f90
src/rt/: CMakeLists.txt  calcVbox.f90  dip.f90  em_field.f90  initialization_rt.f90  main_tddft.f90  md.f90  read_write_restart_rt.f90  taylor.f90  time_evolution_step.f90
src/so/: CMakeLists.txt  conjugate_gradient_so.f90  gram_schmidt_so.f90  noncollinear_module.f90  nondiagonal_so.f90  occupation_so.f90  prep_pp_so.f90  pseudo_pt_current_so.f90  pseudo_pt_so.f90  spin_orbit_global.f90  subspace_diagonalization_so.f90  update_kvector_so.f90
src/ssbe/: CMakeLists.txt  bloch_solver_ssbe.f90  datafile_ssbe.f90  gs_info_ssbe.f90  input_checker_sbe.f90  main_ssbe.f90  multiscale_ssbe.f90  realtime_ssbe.f90  shaper_ssbe.f90  util_ssbe.f90
src/symmetry/: CMakeLists.txt  symmetry.f90  symmetry_kvector.f90  symmetry_rho.f90  symmetry_vector.f90
src/ttm/: CMakeLists.txt  README.md  ttm.f90
src/xc/: CMakeLists.txt  builtin_pbe.f90  builtin_pw.f90  builtin_pz.f90  builtin_pz_sp.f90  builtin_pzm.f90  builtin_tbmbj.f90  salmon_xc.f90
testsuites/: CMakeLists.txt
testsuites/001_bulk_gs/: inputfile
testsuites/002_bulk_rt/: inputfile
testsuites/011_bulk_ms/: inputfile
testsuites/101_C2H2_gs/: inputfile  preparation  verification
testsuites/102_C2H2_rt_response/: inputfile  preparation  verification
testsuites/103_C2H2_rt_pulse/: inputfile  preparation  verification
testsuites/104_C2H2_gs_op/: inputfile  preparation  verification
testsuites/105_C2H2_rt_response_rp/: inputfile  preparation  verification
testsuites/111_bulk_Si_gs_dp/: inputfile  preparation  verification
testsuites/112_bulk_Si_rt_response_dp/: inputfile  verification
testsuites/113_bulk_Si_rt_pulse_dp/: inputfile  verification
testsuites/114_bulk_Si_gs_dp_kp/: inputfile  preparation  verification
testsuites/115_bulk_Si_gs_dp_op/: inputfile  verification
testsuites/116_bulk_Si_rt_response_dp_kp/: inputfile  preparation
testsuites/117_bulk_Si_rt_response_dp_op/: inputfile  preparation  verification
testsuites/118_bulk_Si_gs_dp_ffte/: inputfile  verification
testsuites/119_bulk_Si_rt_response_dp_ffte/: inputfile  verification
testsuites/121_bulk_Si_gs_temperature_dp/: inputfile  preparation  verification
testsuites/121_bulk_Si_gs_temperature_dp_op/: inputfile  verification
testsuites/122_bulk_Si_rt_response_temperature_dp/: inputfile  preparation  verification
(+531 files in other folders)
