add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/preparation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GS)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/RT)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/common)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stencil)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FDTD)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/control)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/perfcheck)

set(SOURCES main.f90)
list_prepend(SOURCES ${CMAKE_CURRENT_SOURCE_DIR})
list(APPEND SALMON_SOURCES ${SOURCES})
set(SALMON_SOURCES ${SALMON_SOURCES} PARENT_SCOPE)
