set(SOURCES
    hartree_boundary.f90
    hartree_cg.f90
    hartree_ffte.f90
    hartree_periodic.f90
   )

add_library(${SALMON_POISSON_LIB} STATIC ${SOURCES})
add_dependencies(${SALMON_POISSON_LIB} ${SALMON_COMMON_LIB} ${SALMON_PARALLEL_LIB} ${SALMON_IO_LIB})
list(APPEND SALMON_LINK_LIBRARIES ${SALMON_POISSON_LIB})
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
